--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="app">React App is not rendering...</div>
-  <script src="./bundle.js"></script>
+  <script src="js/bundle.js" type="text/javascript"></script>
 </body>
 
 </html>
